Mon Aug 18 19:41:07 2003  Holger Bochnig <hbgg@gmx.net>

	* gtkrace.c: bug fix: race theory window didn't even fit on 1024x768

Mon Aug 18 18:54:36 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkbearoff.c (ToggleWho, BearoffSet): remove debug printf.
	(reported by Oeystein)

Mon Aug 18 17:51:45 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal), play.c (ComputerTurn):
	another attempt to fix the resign bug.

Mon Aug 18 17:38:07 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal): copy Joseph's resignation fix.

Mon Aug 18 13:12:05 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* play.c: fix resignation bug.

Sun Aug 17 17:41:58 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* rollout.c - ensure the eval context stored with a rollut has
	  the cubeful/cubeless flags consistent (some exports reported
	  incorrectly that portions were cubeful when they weren't)

Sun Aug 17 12:38:22 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c (DumpStatcontext): fix typo.

Sun Aug 17 12:15:31 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c: remove C++ style variable decl. inside code.

Sun Aug 17  8:45:30 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* gnubg.c - fix overwrite of buffer in CommandSaveSettings
	
Sun Aug 17  0:44:16 GMT 2003  Jim Segrave    <jes@jes-2.demon.nl>

	* play.c - put if(fX) around 3d board code (seg faulted on
	  starting game in text mode
	* board3d/gtkcolour.c - needs string.h
	
Sat Aug 16 11:24:24 2003  Joern Thyssen  <jth@gnubg.org>

        * analysis.c: include only finished games in luck adj.

Sat Aug 16 11:05:45 2003  Joern Thyssen  <jth@gnubg.org>

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): show actual and luck adj. result
	relative instead of absolute.
	(suggested by Chris D. Yep)

Sat Aug 16 10:43:32 2003  Joern Thyssen  <jth@gnubg.org>

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 