@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: html.c,v 1.136 2003/08/16 09:24:47 thyssen Exp $
+ * $Id: html.c,v 1.137 2003/08/20 17:23:32 thyssen Exp $
  */
 
 #include "config.h"
@@ -169,7 +169,7 @@ WriteStyleSheet ( FILE *pf, const htmlexportcss hecss ) {
 
     fputs( _("\n" 
              "/* CSS Stylesheet for GNU Backgammon " VERSION " */\n"
-             "/* $Id: html.c,v 1.136 2003/08/16 09:24:47 thyssen Exp $ */\n"
+             "/* $Id: html.c,v 1.137 2003/08/20 17:23:32 thyssen Exp $ */\n"
              "/* This file is distributed as a part of the "
              "GNU Backgammon program. */\n"
              "/* Copying and distribution of verbatim and modified "
@@ -1913,7 +1913,7 @@ HTMLEpilogue ( FILE *pf, const matchstate *pms, char *aszLinks[ 4 ],
   int fFirst;
   int i;
 
-  const char szVersion[] = "$Revision: 1.136 $";
+  const char szVersion[] = "$Revision: 1.137 $";
   int iMajor, iMinor;
 
   iMajor = atoi ( strchr ( szVersion, ' ' ) );
@@ -1994,7 +1994,7 @@ HTMLEpilogueComment ( FILE *pf ) {
 
   time_t t;
 
-  const char szVersion[] = "$Revision: 1.136 $";
+  const char szVersion[] = "$Revision: 1.137 $";
   int iMajor, iMinor;
   char *pc;
 
@@ -3390,6 +3390,35 @@ static void HTMLDumpStatcontext ( FILE *pf, const statcontext *psc,
           printStatTableRow( pf,
                              _("FIBS rating difference"),
                              "%s", _("n/a"), _("n/a") );
+
+        fprintf( pf, "<tr><td colspan=\"3\">%s</td></tr>\n",
+                 _("(based on luck. adj. result)") );
+
+        /* absolute fibs rating */
+
+        fprintf( pf, "<tr><td>%s</td>", _("Estimated abs. rating") );
+
+        for ( i = 0; i < 2; ++i ) {
+
+          fputs( "<td>", pf );
+
+          if ( psc->anCloseCube[ i ] + psc->anUnforcedMoves[ i ] )
+            fprintf( pf, "%6.1f", 
+                     absoluteFibsRating( aaaar[ COMBINED ][ PERMOVE ][ i ][ NORMALISED ], 
+                                         pms->nMatchTo, rRatingOffset ) );
+          else
+            fputs( _("n/a"), pf );
+
+          fputs( "</td>", pf );
+
+        }
+
+        fputs( "</tr>\n", pf );
+
+        fprintf( pf, "<tr><td colspan=\"3\">%s</td></tr>\n",
+                 _("(based on error rate per decision)") );
+
+
       }
 
     }
